# vitta-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260213_01_initial_schema.py  20260213_02_feedback_status_index.py  20260213_03_audit_job_idempotency_key.py  20260213_04_app_settings_table.py  20260213_05_scheduled_audits.py
data/: sample_transactions.csv  sample_ui_transactions.csv  taxonomy_base.yaml  taxonomy_overrides.yaml  upi_classifier_eval.csv
data/gazetteer/: merchant_aliases.csv
data/training/: bootstrap_transactions.jsonl  few_shot_examples.jsonl  test.jsonl  train.jsonl
docs/: ARCHITECTURE.md  REFERENCE_INTEGRATION.md
scripts/: allocate_runtime_ports.py  common_runtime.sh  evaluate_bge_m3.py  run_frontend_dev.py  run_regular.sh  run_sample_audit.py  setup_first_time.sh  test_accuracy.py  train_ml_classifier.py
src/sentinelfi/: main.py
src/sentinelfi/agents/: cleanup_agent.py  gst_sentinel.py  llm_reasoner.py  mcc_classifier.py  ml_classifier.py  slm_classifier.py
src/sentinelfi/api/: app.py  schemas.py
src/sentinelfi/connectors/: csv_connector.py  pdf_connector.py  (+2 more)
templates/: leakage_report_template.md
tests/: test_active_learning_service.py  test_api_app.py  test_api_security.py  test_audit_graph_routing.py  test_audit_job_service.py  test_audit_orchestrator.py  test_classification_policy.py  test_cleanup_orchestrator.py  test_connectors.py  test_dataset_manifest.py  test_db_migrations.py  test_explainability_service.py  test_export_service.py  test_gst_sentinel.py  test_ingestion_service.py  test_leak_detection.py  test_llm_reasoner.py  test_mcc_classifier.py  test_merchant_resolver.py  test_ml_classifier.py  test_ml_drift_monitor.py  test_notification_service.py  test_risk_scoring.py  test_routing_service.py  test_scheduled_audit_service.py  test_slm_classifier.py  test_taxonomy_service.py  test_telemetry.py  test_text_utils.py
(+46 files in other folders)
