[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-fi"
version = "0.1.0"
description = "Agentic financial leakage auditor for Indian businesses"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Sentinel-Fi"}]
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "langgraph>=0.2.14",
  "langchain-core>=0.3.0",
  "sqlmodel>=0.0.22",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.1.19",
  "httpx>=0.27.0",
  "tenacity>=8.5.0",
  "structlog>=24.4.0",
  "reportlab>=4.2.0",
  "pdfplumber>=0.11.2",
  "scikit-learn>=1.5.0",
  "joblib>=1.4.0",
  "requests>=2.32.0",
  "openai>=1.42.0",
  "python-dateutil>=2.9.0",
  "chardet>=5.2.0",
  "livereload>=2.7.1",
  "eval-type-backport>=0.2.0",
  "PyYAML>=6.0",
  "prometheus-client>=0.20.0",
  "redis>=5.0.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[project.optional-dependencies]
ml = [
  "sentence-transformers>=3.0.1",
  "torch>=2.3.0",
]
ocr = [
  "paddleocr>=3.3.0",
  "pypdfium2>=4.30.0",
  "Pillow>=10.0.0",
]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pre-commit>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sentinelfi.web" = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "B019", "E501", "UP045"]

[tool.mypy]
python_version = "3.9"
strict = true
mypy_path = "src"
warn_unused_configs = true
